--- a/header.html
+++ b/header.html
@@ -1,24 +1,26 @@
 <header>
     <div class="linha" id="topo">
-        <div class="esquerda" id="logo">
-            <figure>
-                <img src="" alt="">
+        <div class="esquerda-menu">
+            <figure >
+                <img class="logo-header" src="../Rythym/images/Rythym - Logo.png" alt="Logotipo Rythym">
             </figure>
             <h1 id="Menu_title" class="menu">
-                RYTHYM
+                <a href="index.php">
+                    RYTHYM
+                </a>
             </h1>
         </div>
-        <div class="direita">
+        <div class="direita-menu">
             <nav>
                 <ul class="menu">
-                    <li><a href="#index.html">Inicio</a></li>
-                    <li><a href="explorar">Explorar</a>
+                    <li><a href="index.php">Inicio</a></li>
+                    <li><a>Explorar</a>
                         <ul class="menu_submenu">
-                            <li><a href="charts">Charts</a></li>
-                            <li><a href="artistas">Artistas</a></li>
+                            <li><a href="charts.php">Charts</a></li>
+                            <li><a href="artistas.php">Artistas</a></li>
                         </ul>
                     </li>
-                    <li><a href="ajuda">Ajuda</a></li>
+                    <li><a href="ajuda.php">Ajuda</a></li>
                     <li><a href="premium">Premium</a></li>
                     <li><a href="baixar">Baixar</a></li>
                 </ul>
